<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ecg_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/ecg_view_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.tabipapp.UI.MinttiVision.Fragment.ecg.EcgBackgroundView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:largeGridColor="#eee"
            app:smallGridColor="#eee" />

        <com.example.tabipapp.UI.MinttiVision.Fragment.ecg.ChartView
            android:id="@+id/ecg_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_ecg_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="00:00"
        style="@style/common_text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecg_view_container" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/gain_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/ecg_gain"
        android:spinnerMode="dropdown"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_ecg_duration"
        android:theme="@style/common_text_color"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/gain_spinner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tv_rr_max_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_avg_hr_key"
                style="@style/common_text_color"
                android:layout_marginTop="10dp"
                android:text="@string/rr_max"/>

            <TextView
                android:id="@+id/tv_rr_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv_rr_max_key"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_rr_max_key"
                style="@style/common_text_color"
                android:text="-- ms"/>
            <TextView
                android:id="@+id/tv_rr_min_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rr_max_key"
                android:layout_marginTop="10dp"
                style="@style/common_text_color"
                android:text="@string/rr_min"/>

            <TextView
                android:id="@+id/tv_rr_min_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv_rr_min_key"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_rr_min_key"
                style="@style/common_text_color"
                android:text="-- ms"/>

            <TextView
                android:id="@+id/tv_avg_hr_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/common_text_color"
                android:text="@string/heart_rate"/>

            <TextView
                android:id="@+id/tv_avg_hr_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv_avg_hr_key"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_avg_hr_key"
                style="@style/common_text_color"
                android:text="-- bpm"/>

            <TextView
                android:id="@+id/tv_hrv_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/guide_line"
                app:layout_constraintTop_toBottomOf="@id/tv_resp_key"
                android:layout_marginTop="10dp"
                style="@style/common_text_color"
                android:text="@string/hrv"/>

            <TextView
                android:id="@+id/tv_hrv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv_hrv_key"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_hrv_key"
                style="@style/common_text_color"
                android:text="-- ms"/>

            <TextView
                android:id="@+id/tv_resp_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/guide_line"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/common_text_color"
                android:text="@string/respiratory_rate"/>

            <TextView
                android:id="@+id/tv_resp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tv_resp_key"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_resp_key"
                style="@style/common_text_color"
                android:text="-- bpm"/>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/bt_measure_ecg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start_measure"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
