<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bg_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_select_paper_code_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text=""
            android:visibility="invisible"
            tools:visibility="invisible" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_test_paper_manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginBottom="6dp"
            android:layout_marginTop="10dp"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_test_paper_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_measure_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start_measure"
        android:textSize="18sp"
        android:visibility="invisible"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="30dp"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tv_bg_result"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@id/ll_select_paper_code_container"
        app:layout_constraintVertical_bias="0.18" />


    <TextView
        android:id="@+id/tv_bg_result2"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@id/tv_bg_result"
        app:layout_constraintVertical_bias="0.08" />


    <TextView
        android:id="@+id/tv_bg_status"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait_adjust"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bloog_glucose_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bg_result2" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bloog_glucose_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blood_glucose_level2"
        android:foregroundGravity="fill_horizontal"
        android:text="--"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bg_status" />
    <TextView
        android:id="@+id/textView3"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="256dp"
        android:text="@string/bg_result"
        app:layout_constraintEnd_toStartOf="@+id/tv_bg_result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_bg_result" />


</androidx.constraintlayout.widget.ConstraintLayout>